--- a/scss/_terrariums.scss
+++ b/scss/_terrariums.scss
@@ -38,3 +38,7 @@
   bottom: 1rem;
   right: 1rem;
 }
+
+.terrariums-overview {
+  padding-bottom: 1.25rem;
+}
